fika/static/main.css
.nav .profile-image {
    margin: -5px 0;
}
.image-segment
{
	width: 100%;
}
.description {
    font-weight: bold;
}
.collapser{
	display:block;
}

.fika-media-button
{
	display:inline;
}

.fika-media-button:hover
{
	text-decoration:none;
}

.panel-title a{
	text-decoration:none;
}

.fika-media-panel
{
	border: 0px;
	box-shadow:none;
}

.mediaobject
{
	padding-top:10px;
}

.image-mediaobject
{
	max-width: 100%;
	max-height: 600px;
}

.auto-resizable-iframe {
  max-width: 640px;
  margin: 0px auto;
}

.auto-resizable-iframe > div {
  position: relative;
  padding-bottom: 75%;
  height: 0px;
}

.auto-resizable-iframe iframe {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
}


.mediaobject video
{
	width:100%;	
}

.fika-enroll-button-right
{
	float:right;
	margin-top:-5px;
}


.dotless
{
	list-style-type: none;
	margin-left:-15px;
}

.fika-divider{
	border-bottom:1px solid #DDD;
	margin:10px 0px;
}

/* bootstrap specific */
.panel-add {
    border-style: dashed;
}

table.table-bottom-border td:last-of-type{
	border-bottom:1px solid #DDD;
}

/* navbar buttons compressed into icons on small screen */
.fika-nav-button-text{
	display:none;
}
.navbar-header > .navbar-nav > li
{
    float:left;
}
@media (min-width: 1200px)
{
    .fika-nav-button-text{
        display:inline;
    }
}
@media (min-width: 768px)
{
    .image-segment
    {
        max-width: 500px;
    }
    .fika-nav-button-text{
        display:inline;
    }
    .navbar-header .fika-nav-button-text{
        display:none;
    } 
}

